<resources>

    <string name="language_name">English</string>
    <string name="translator">BlueWhaleYT</string>
    <string name="app_name">CodeWhale</string>

    <string name="settings">Settings</string>
    <string name="application">Application</string>
    <string name="editor">Editor</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Set a beautiful theme for the editor</string>
    <string name="follow_editor_theme">Follow editor theme</string>
    <string name="follow_editor_theme_summary">Enable UI color with editor color scheme</string>
    <string name="syntax_highlighting">Syntax Highlighting</string>
    <string name="syntax_highlighting_summary">Enable syntax highlighting for the editor</string>
    <string name="textmate">Textmate</string>
    <string name="textmate_summary">Enable textmate themes and languages</string>
    <string name="syntax_language">Language</string>
    <string name="word_wrap">Word Wrap</string>
    <string name="word_wrap_summary">Jump to the next line when necessary and fit screen width</string>
    <string name="auto_completion">Auto Completion</string>
    <string name="auto_completion_summary">Enable basic code suggestions when typing words</string>
    <string name="pinch_zoom">Pinch Zoom</string>
    <string name="magnifier">Magnifier</string>
    <string name="magnifier_summary">Enable magnifier when move the cursor</string>
    <string name="icu_lib">ICU Library</string>
    <string name="icu_lib_summary">Retrieve word edges for double-tap and long-press word selection</string>
    <string name="line_number">Line Number</string>
    <string name="line_number_summary">Enable line Numbers to the left of the editor</string>
    <string name="pin_line_number">Pin Line Number</string>
    <string name="pin_line_number_summary">Pin line numbers when horizontally scrolling the editor</string>
    <string name="font_size">Font Size</string>
    <string name="tab_size">Tab Width</string>
    <string name="delete_empty_line_fast">Delete empty line fast</string>
    <string name="keyboard_suggestions">Keyboard Suggestions</string>
    <string name="font_ligatures">Font Ligatures</string>
    <string name="font_ligatures_summary">Only available for supported fonts</string>
    <string name="dynamic_color">Dynamic Color</string>
    <string name="dynamic_color_summary">Only available for Android 12 or higher</string>
    <string name="about">About</string>
    <string name="still_develop">This app is still under development, which may produce bugs and errors. Please backup the files when using this app.</string>
    <string name="settings_change">The App needs to be restarted in order to have changes</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_summary">See Github repository and README file</string>
    <string name="version">Version</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="translate">Translate</string>
    <string name="code_style">Code Style</string>
    <string name="tab">Tab</string>
    <string name="replace_tab">Use spaces instead of tabs</string>
    <string name="replace_tab_summary">Insert spaces instead of tabs in the editor</string>
    <string name="non_print_flag">Non Printable Flags</string>
    <string name="npf_ws_inner">Whitespace Inner</string>
    <string name="npf_ws_leading">Whitespace Leading</string>
    <string name="npf_ws_trailing">Whitespace Trailing</string>
    <string name="npf_ws_for_empty_line">Whitespace for empty line</string>
    <string name="npf_ws_in_selection">Whitespace in selection</string>
    <string name="npf_tab_same_as_space">Tab same as space</string>
    <string name="npf_line_separator">Line Separator</string>
    <string name="developer">Developer</string>
    <string name="auto_completion_hint">Press %1$s to insert</string>
    <string name="component">Components</string>
    <string name="component_summary">Additional components supported for the editor</string>
    <string name="auto_complete_follow_cursor">Follow cursor position</string>
    <string name="auto_complete_follow_cursor_summary">The auto completion will display near the cursor position</string>
    <string name="toolbar">Toolbar</string>
    <string name="editor_symbol_input_toolbar">Symbol Input</string>
    <string name="editor_selection_action_toolbar">Selection Action</string>
    <string name="magnifier_scale">Scale</string>
    <string name="magnifier_resolve">You had set magnifier scale %1$s, which is incorporate, it was resolved with value "1.1".</string>
    <string name="stroke">Stroke</string>
    <string name="stroke_summary">Enable outline stroke</string>
    <string name="animation">Animation</string>
    <string name="animation_summary">Enable transition and animation</string>
    <string name="language">Language</string>
    <string name="translate_by">by %1$s</string>
    <string name="indentation">Indentation</string>
    <string name="auto_indent">Auto Indent</string>
    <string name="auto_indent_summary">Indent next line when it\'s created</string>
    <string name="choose_theme">Choose theme</string>
    <string name="line_number_click_select">Click to select whole line</string>
    <string name="highlight_bracket_delimiter">Highlight Bracket Delimiter</string>
    <string name="highlight_bracket_delimiter_summary">Highlight a bracket pair when it is selected</string>
    <string name="margin">Margin</string>
    <string name="align">Align</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="find">Find</string>
    <string name="replace">Replace</string>
    <string name="replace_all">Replace All</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="highlight">Highlight</string>
    <string name="highlight_bold">Highlight Bold</string>
    <string name="custom">Custom</string>
    <string name="coming_soon">Coming soon</string>
    <string name="choose_favorite_theme">Choose your favorite theme for the editor</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="open_file">Open file</string>
    <string name="open_folder">Open folder</string>
    <string name="close">Close</string>
    <string name="file">File</string>
    <string name="create">Create</string>
    <string name="create_file">Create file</string>
    <string name="create_folder">Create folder</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="theme_warning">Themes are not completed</string>
    <string name="theme_warning_summary">The themes are from VSCode, they may not be fully applied to the editor perhaps.</string>
    <string name="folder_max_color">Folder max colors</string>
    <string name="treeview_file_list">TreeView File list</string>
    <string name="file_manager">File Manager</string>
    <string name="empty">Empty</string>
    <string name="file_save">File is saved</string>
    <string name="empty_no_files">No files</string>
    <string name="empty_no_files_desc">Open a file through the navigation drawer</string>
    <string name="open_recent_file">Open recent file</string>
    <string name="git_clone_repo">Clone repository</string>
    <string name="remote_repo">Remote repository path</string>
    <string name="local_repo">Local repository path</string>
    <string name="choose_folder">Choose folder</string>
    <string name="no_files_picked">No files picked</string>
    <string name="clone">Clone</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="current_first_visible_line">Current First Line</string>
    <string name="textmate_only">This feature is for TextMate only</string>
    <string name="permission_request">Permission required</string>
    <string name="permission_request_desc">You need to grant the permissions before using the application</string>
    <string name="share">Share</string>
    <string name="share_text">Share text</string>
    <string name="share_file">Share file</string>

    <string name="keyword">Keyword</string>
    <string name="identifier">Identifier</string>
    <string name="method">Method</string>
    <string name="snippet">Snippet</string>

    <string name="restart">Restart</string>

    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="common">Common</string>
    <string name="advanced">Advanced</string>
    <string name="note">Note</string>
    <string name="warning">Warning</string>

</resources>