<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.bluewhaleyt.component.preferences.TitlePreference
        app:title="@string/editor" />

    <PreferenceCategory
        app:title="@string/general"
        app:iconSpaceReserved="false">

        <com.bluewhaleyt.component.preferences.ButtonPreference
            app:key="btn_pref_component"
            app:icon="@drawable/ic_outline_widgets_24"
            app:title="@string/component"
            app:summary="@string/component_summary"
            app:fragment="com.bluewhaleyt.whalecode.fragments.preferences.editor.ComponentFragment" />

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_syntax_highlighting"
            app:title="@string/syntax_highlighting"
            app:summary="@string/syntax_highlighting_summary"
            app:icon="@drawable/ic_baseline_invert_colors_24"
            app:defaultValue="true"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_textmate"
            app:title="@string/textmate"
            app:summary="@string/textmate_summary"
            app:icon="@drawable/ic_outline_star_border_24"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/theme"
        app:iconSpaceReserved="false">

        <com.bluewhaleyt.component.preferences.ButtonPreference
            app:key="btn_pref_theme"
            app:title="@string/theme"
            app:summary="@string/theme_summary"
            app:icon="@drawable/ic_outline_style_24"
            app:fragment="com.bluewhaleyt.whalecode.fragments.preferences.editor.ThemeFragment" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_pref_syntax_language"
        app:title="@string/syntax_language"
        app:iconSpaceReserved="false">

        <com.bluewhaleyt.component.preferences.ButtonPreference
            app:key="btn_pref_syntax_language"
            app:title="@string/syntax_language"
            app:icon="@drawable/ic_baseline_code_24"
            app:fragment="com.bluewhaleyt.whalecode.fragments.preferences.editor.LanguageFragment" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/common"
        app:iconSpaceReserved="false"
        app:initialExpandedChildrenCount="4">

        <SeekBarPreference
            app:key="pref_font_size"
            app:icon="@drawable/ic_baseline_format_size_24"
            app:title="@string/font_size"
            app:showSeekBarValue="true"
            app:layout="@layout/layout_seekbar"
            app:defaultValue="18"
            android:max="80"
            app:min="10"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_word_wrap"
            app:icon="@drawable/ic_baseline_wrap_text_24"
            app:title="@string/word_wrap"
            app:summary="@string/word_wrap_summary"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_pinch_zoom"
            app:icon="@drawable/ic_outline_pinch_24"
            app:title="@string/pinch_zoom"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/advanced"
        app:iconSpaceReserved="false"
        app:initialExpandedChildrenCount="2">

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_font_ligatures"
            app:icon="@drawable/ic_outline_font_download_24"
            app:title="@string/font_ligatures"
            app:summary="@string/font_ligatures_summary"
            app:defaultValue="false"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_delete_empty_line_fast"
            app:icon="@drawable/ic_baseline_delete_sweep_24"
            app:title="@string/delete_empty_line_fast"
            app:defaultValue="false"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_keyboard_suggestions"
            app:icon="@drawable/ic_outline_auto_fix_high_24"
            app:title="@string/keyboard_suggestions"
            app:defaultValue="false"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_icu_lib"
            app:icon="@drawable/ic_baseline_select_all_24"
            app:title="@string/icu_lib"
            app:summary="@string/icu_lib_summary"
            app:defaultValue="true"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_highlight_bracket_delimiter"
            app:icon="@drawable/ic_baseline_data_object_24"
            app:title="@string/highlight_bracket_delimiter"
            app:summary="@string/highlight_bracket_delimiter_summary"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/non_print_flag"
        app:iconSpaceReserved="false"
        app:initialExpandedChildrenCount="1">

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_non_print_flag"
            app:title="@string/non_print_flag"
            app:icon="@drawable/ic_outline_print_24"
            app:defaultValue="true"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_npf_ws_inner"
            app:title="@string/npf_ws_inner"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_npf_ws_leading"
            app:title="@string/npf_ws_leading"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_npf_ws_trailing"
            app:title="@string/npf_ws_trailing"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_npf_ws_for_empty_line"
            app:title="@string/npf_ws_for_empty_line"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_npf_ws_in_selection"
            app:title="@string/npf_ws_in_selection"
            app:defaultValue="true"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_npf_tab_same_as_space"
            app:title="@string/npf_tab_same_as_space"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_npf_line_separator"
            app:title="@string/npf_line_separator"/>

    </PreferenceCategory>

</PreferenceScreen>