<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_undo"
        android:title="@string/undo"
        android:icon="@drawable/ic_baseline_undo_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_redo"
        android:title="@string/redo"
        android:icon="@drawable/ic_baseline_redo_24"
        app:showAsAction="always"/>

    <item
        android:title="@string/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_syntax_language"
                android:title="@string/syntax_language"
                android:icon="@drawable/ic_baseline_code_24"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_save_file"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"/>

    <item
        android:id="@+id/menu_close_file"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/close"/>

    <item
        android:icon="@drawable/ic_baseline_create_new_file_24"
        android:title="@string/create">
        <menu>
            <item
                android:id="@+id/menu_create_folder"
                android:icon="@drawable/ic_baseline_create_new_folder_24"
                android:title="@string/create_folder" />
            <item
                android:id="@+id/menu_create_file"
                android:icon="@drawable/ic_baseline_create_new_file_24"
                android:title="@string/create_file" />
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_baseline_file_open_24"
        android:title="@string/open">
        <menu>
            <item
                android:id="@+id/menu_open_folder"
                android:icon="@drawable/ic_baseline_folder_open_24"
                android:title="@string/open_folder" />
            <item
                android:id="@+id/menu_open_file"
                android:icon="@drawable/ic_baseline_file_open_24"
                android:title="@string/open_file" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_search"
        android:contentDescription="@string/find"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/find" />

    <item
        android:id="@+id/menu_share"
        android:contentDescription="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share" />

    <item
        android:id="@+id/menu_settings"
        android:contentDescription="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>