<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.bluewhaleyt.component.preferences.TitlePreference
        app:title="@string/component" />

    <PreferenceCategory
        app:title="@string/auto_completion"
        app:iconSpaceReserved="false"
        app:initialExpandedChildrenCount="1">

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_auto_completion"
            app:icon="@drawable/ic_outline_auto_fix_high_24"
            app:title="@string/auto_completion"
            app:summary="@string/auto_completion_summary"
            app:defaultValue="true"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_auto_completion_follow_cursor"
            app:title="@string/auto_complete_follow_cursor"
            app:summary="@string/auto_complete_follow_cursor_summary"
            app:icon="@drawable/ic_baseline_space_bar_24" />

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_auto_completion_stroke"
            app:title="@string/stroke"
            app:summary="@string/stroke_summary"
            app:icon="@drawable/ic_baseline_border_style_24"
            app:defaultValue="true"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_auto_completion_animation"
            app:title="@string/animation"
            app:summary="@string/animation_summary"
            app:icon="@drawable/ic_baseline_animation_24"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/magnifier"
        app:iconSpaceReserved="false">

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_magnifier"
            app:icon="@drawable/ic_baseline_zoom_in_24"
            app:title="@string/magnifier"
            app:summary="@string/magnifier_summary"
            app:defaultValue="true"/>

        <EditTextPreference
            app:key="pref_magnifier_scale"
            app:icon="@drawable/ic_baseline_format_size_24"
            app:title="@string/magnifier_scale"
            app:defaultValue="1.25"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/toolbar"
        app:iconSpaceReserved="false">

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_symbol_input"
            app:icon="@drawable/ic_baseline_emoji_symbols_24"
            app:title="@string/editor_symbol_input_toolbar"
            app:defaultValue="true"/>

        <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
            app:key="pref_enable_selection_action"
            app:icon="@drawable/ic_baseline_crop_free_24"
            app:title="@string/editor_selection_action_toolbar"
            app:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>