<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.bluewhaleyt.component.preferences.TitlePreference
        app:title="@string/application" />

    <ListPreference
        app:key="pref_app_theme"
        app:title="@string/theme"
        app:useSimpleSummaryProvider="true"
        app:icon="@drawable/ic_outline_brightness_4_24"
        app:entries="@array/theme_text"
        app:entryValues="@array/theme_value" />

    <com.bluewhaleyt.component.preferences.material3.Material3SwitchPreference
        app:key="pref_enable_dynamic_color"
        app:icon="@drawable/ic_outline_style_24"
        app:title="@string/dynamic_color"
        app:summary="@string/dynamic_color_summary"/>

</PreferenceScreen>