<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/empty_no_files"
        android:textColor="?colorOnBackground"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_no_files_desc"
        android:textColor="?colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnOpenRecentFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_file_open_24"
            android:drawableTint="?colorOnPrimary"
            android:text="@string/open_recent_file" />

        <Button
            android:id="@+id/btnOpenFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_folder_24"
            android:drawableTint="?colorOnPrimary"
            android:text="@string/open_folder" />

        <Button
            android:id="@+id/btnGitClone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_github_24"
            android:drawableTint="?colorOnPrimary"
            android:text="@string/git_clone_repo" />

    </LinearLayout>

</LinearLayout>